product quote is functional
